# ZenTable

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: mod.rs  models.rs  mongodb.rs  postgres.rs  sqlite.rs
src/components/: ConnectionList.tsx  ConnectionPanel.tsx  DatabaseExplorer.tsx  HeroSection.tsx  QueryPanel.tsx  ResultsPanel.tsx
