[package]
name = "zentable"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zentable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
mongodb = "2.7.1"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.48"
async-trait = "0.1.73"
once_cell = "1.18.0"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4"
futures = "0.3.31"

